--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://gritchie1.github.io/gritchie1.github.io/",
+  "homepage":"https://gritchie1.github.io/portfolio/",
   "name": "gritchie1.github.io",
   "version": "0.1.0",
   "private": true,
