Change name of react project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://gregor-ritchie.co.uk",
-  "name": "gritchie1.github.io",
+  "name": "PortfolioWebsite",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
